package rec.audio;

message PlayState {
  optional int64 time = 1;
  optional bool is_playing = 2;
};